--- a/csharp/csharp.csproj
+++ b/csharp/csharp.csproj
@@ -68,6 +68,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ItemPropertiesHandler.cs" />
+    <Compile Include="ItemModels\Sulfuras.cs" />
+    <Compile Include="ItemModels\Common.cs" />
+    <Compile Include="ItemModels\AgedBrie.cs" />
+    <Compile Include="ItemModels\BackstagePasses.cs" />
+    <Compile Include="ItemModels\Conjured.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -75,6 +80,9 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ItemModels\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
